# canon-explorer

./: README.md  Whitepaper.md  pyproject.toml  requirements.txt  run.py
src/: __init__.py
src/analytics/: __init__.py
src/core/: __init__.py  ca_engines.py  canon_operators.py  integration.py  substrate_lattice.py  system_manager.py
src/io/: __init__.py
src/ui/: __init__.py  application.py  control_panel.py  docking_system.py  multi_viewport.py  orthogonal_system.py  settings_panel.py  system_strip.py  time_dial.py
src/visualization/: __init__.py  canon_views.py  colors.py  informational_views.py  physical_views.py  scope_views.py  view_registry.py
tests/: test_full.py
